app/nginx-test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    appc: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
